fixing gap

--- a/pegasus/sites.v3/code.org/styles_min/040-page.css
+++ b/pegasus/sites.v3/code.org/styles_min/040-page.css
@@ -292,8 +292,9 @@ input[type="submit"] {
     .flex-wrapper {
       display: flex;
       align-items: center;
-      gap: 0.25rem;
+      gap: 0.5rem;
     }
+
     &.has-external-link {
       display: inline-flex;
       gap: 0.25rem;
